[gd_scene load_steps=2 format=2]

[ext_resource path="res://ui/axis.gd" type="Script" id=1]

[node name="axis" type="Node2D"]
script = ExtResource( 1 )

[node name="axis0lsl" type="Node2D" parent="."]
position = Vector2( 0, 32 )

[node name="rect" type="ColorRect" parent="axis0lsl"]
margin_right = 31.0
margin_bottom = 31.0
color = Color( 1, 1, 1, 0 )

[node name="label" type="Label" parent="axis0lsl"]
margin_right = 40.0
margin_bottom = 14.0
text = "0LL"

[node name="axis0lsr" type="Node2D" parent="."]
position = Vector2( 64, 32 )

[node name="rect" type="ColorRect" parent="axis0lsr"]
margin_right = 31.0
margin_bottom = 31.0
color = Color( 1, 1, 1, 0 )

[node name="label" type="Label" parent="axis0lsr"]
margin_right = 40.0
margin_bottom = 14.0
text = "0LR"

[node name="axis1lsu" type="Node2D" parent="."]
position = Vector2( 32, 0 )

[node name="rect" type="ColorRect" parent="axis1lsu"]
margin_right = 31.0
margin_bottom = 31.0
color = Color( 1, 1, 1, 0 )

[node name="label" type="Label" parent="axis1lsu"]
margin_right = 40.0
margin_bottom = 14.0
text = "1LU"

[node name="axis1lsd" type="Node2D" parent="."]
position = Vector2( 32, 64 )

[node name="rect" type="ColorRect" parent="axis1lsd"]
margin_right = 31.0
margin_bottom = 31.0
color = Color( 1, 1, 1, 0 )

[node name="label" type="Label" parent="axis1lsd"]
margin_right = 40.0
margin_bottom = 14.0
text = "1LD"

[node name="axis2rsl" type="Node2D" parent="."]
position = Vector2( 0, 160 )

[node name="rect" type="ColorRect" parent="axis2rsl"]
margin_right = 31.0
margin_bottom = 31.0
color = Color( 1, 1, 1, 0 )

[node name="label" type="Label" parent="axis2rsl"]
margin_right = 40.0
margin_bottom = 14.0
text = "2RL"

[node name="axis2rsr" type="Node2D" parent="."]
position = Vector2( 64, 160 )

[node name="rect" type="ColorRect" parent="axis2rsr"]
margin_right = 31.0
margin_bottom = 31.0
color = Color( 1, 1, 1, 0 )

[node name="label" type="Label" parent="axis2rsr"]
margin_right = 40.0
margin_bottom = 14.0
text = "2RR"

[node name="axis3rsu" type="Node2D" parent="."]
position = Vector2( 32, 128 )

[node name="rect" type="ColorRect" parent="axis3rsu"]
margin_right = 31.0
margin_bottom = 31.0
color = Color( 1, 1, 1, 0 )

[node name="label" type="Label" parent="axis3rsu"]
margin_right = 40.0
margin_bottom = 14.0
text = "3RU"

[node name="axis3rsd" type="Node2D" parent="."]
position = Vector2( 32, 192 )

[node name="rect" type="ColorRect" parent="axis3rsd"]
margin_right = 31.0
margin_bottom = 31.0
color = Color( 1, 1, 1, 0 )

[node name="label" type="Label" parent="axis3rsd"]
margin_right = 40.0
margin_bottom = 14.0
text = "3RD"
